--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   
  </body>
  <script> 
-      window.location.href="https://blog.csdn.net/qq_23853743/";
+      window.location.href="https://www.jianshu.com/u/44000bd09fd0";
 </script>
 </html>
